Prepared chapter 2 - User
+ create new module
+ add README and configuration file
+ add main application

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>ch01-basics</module>
+        <module>ch02-user</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
