--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>ch01-basics</module>
         <module>ch02-user</module>
         <module>ch03-password</module>
+        <module>ch5-authentification</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
