--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>ch02-user</module>
         <module>ch04-password</module>
         <module>ch05-authentication</module>
+        <module>ch06-webproject</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
