Prepared chapter 9 filter

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>ch06-webproject</module>
         <module>ch07-authorization</module>
         <module>ch08-cfgauth</module>
+        <module>ch09-filter</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
