--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>ch09-filter</module>
         <module>ch10-cors</module>
         <module>ch11-hojwt</module>
+        <module>ch11-blserver</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
